Alterado arquivo de config para pegar treinamento do colab

--- a/training/faster_rcnn_inception_v2_pets.config
+++ b/training/faster_rcnn_inception_v2_pets.config
@@ -123,7 +123,7 @@ train_config: {
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "/content/drive/My\ Drive/workspace/train.record"
+    input_path: "/content/tensorflow1/models/research/object_detection/train.record"
   }
   label_map_path: "/content/tensorflow1/models/research/object_detection/training/labelmap.pbtxt"
 }
@@ -137,7 +137,7 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "/content/drive/My\ Drive/workspace/test.record"
+    input_path: "/content/tensorflow1/models/research/object_detection/"
   }
   label_map_path: "/content/tensorflow1/models/research/object_detection/training/labelmap.pbtxt"
   shuffle: false
