Corrigida configuração de eval input_reader test.record

--- a/training/faster_rcnn_inception_v2_pets.config
+++ b/training/faster_rcnn_inception_v2_pets.config
@@ -137,7 +137,7 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "/content/tensorflow1/models/research/object_detection/"
+    input_path: "/content/tensorflow1/models/research/object_detection/test.record"
   }
   label_map_path: "/content/tensorflow1/models/research/object_detection/training/labelmap.pbtxt"
   shuffle: false
